Code coverage update

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ jdk:
   - oraclejdk8
 install: true
 script: ./travis/build.sh
+after_success:
+  - mvn clean test jacoco:report coveralls:report
 notifications:
   irc:
     channels:
