Code Coverage Update

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ jdk:
   - oraclejdk8
 install: true
 script: ./travis/build.sh
+  mvn clean test jacoco:report coveralls:report
 after_success:
   - mvn clean test jacoco:report coveralls:report
 notifications:
