--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,9 @@ cache:
 jdk:
   - oraclejdk8
 install: true
-script: ./travis/build.sh
+script: ./mvnw clean install
 after_success:
-  - mvn clean test coveralls:report
+  - mvn clean test jacoco:report coveralls:report
 notifications:
   irc:
     channels:
