--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ jdk:
 install: true
 script: ./travis/build.sh
 after_success:
-  - mvn clean test coveralls:report
+  - mvn clean test jacoco:report coveralls:report
 notifications:
   irc:
     channels:
