--- a/pom.xml
+++ b/pom.xml
@@ -242,6 +242,9 @@
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
 				<version>0.7.6.201602180812</version>
+				<configuration>
+					<outputDirectory>code-coverage/src</outputDirectory>
+				</configuration>
 				<executions>
 					<execution>
 						<id>prepare-agent</id>
